# coding-standards

./: .ci.json  .codespellrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .hadolint.yaml  .lycheecache  .markdownlint-cli2.yaml  .mega-linter-default.yml  .mega-linter.yml  .prettierrc  .shellcheckrc  .trivyignore  .v8rrc.yml  .yamllint  .zizmor.yml  CLAUDE.md  Dockerfile  README.md  _typos.toml  action.yml  build-assets.yml  commitlint.config.mjs  consumer.just  justfile  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  renovate.json  repo-manifest.json  ruff.toml  sync-manifest.yml
.mega-linter-config/: .ls-lint.yml  .shellcheckrc  .v8rrc.yml
configs/: .envrc.snippet  .hadolint.yaml  .pre-commit-config.remote.yaml  .pre-commit-config.yaml  justfile
docker-action/: action.yml
docs/: architecture-decisions.md  catalog.md  change-impact-techniques.md  config-decisions.md  consumer-guide.md  megalinter-migration-plan.md  perf-baseline.md
examples/: .coding-standards.yml  justfile  lint-docker.yml  lint.yml
lint-configs/: .gitleaks.toml  .hadolint.yaml  .jscpd.json  .ls-lint.yml  .lychee.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc  .shellcheckrc  .tflint.hcl  .v8rignore  .v8rrc.yml  .zizmor.yml  commitlint.config.mjs  eslint.config.mjs  pyrightconfig.json  (+1 more)
lint-configs-626465/: .cspell.json  .gitleaks.toml  .hadolint.yaml  .jscpd.json  .markdownlint-cli2.baseline.yaml  .markdownlint-cli2.yaml  .mega-linter.yml  .pre-commit-config.yaml  .shellcheckrc  .spectral.yaml  .v8rrc.yml  commitlint.config.baseline.mjs  commitlint.config.mjs  eslint.config.mjs  ruff.toml
(+196 files in other folders)
